# Lab3

./: .gitignore  CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  SalariedEmployee.cpp  SalariedEmployee.h  Student.cpp  Student.h  main.cpp
